--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,9 @@
         <a href="/" class="brand-logo">Graiglist Clone</a>
         <ul id="nav-mobile" class="right">
           <li><a href="/">Home</a></li>
+          <li>
+            <a href="/"><i class="material-icons right">send</i></a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -59,8 +62,7 @@
             <i class="large material-icons" style="color: blue"
               >chrome_reader_mode</i
             >
-            <p>A much sexier front-end to Craigslist</p>
-            <p class="light center">We built this with ❤️</p>
+            <p>A much better front-end to Craigslist</p>
           </div>
         </div>
       </div>
