--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,11 @@
         <ul id="nav-mobile" class="right">
           <li><a href="/">Home</a></li>
           <li>
-            <a href="/"><i class="material-icons right">send</i></a>
+            <a
+              href="https://github.com/vsahinid/django-craigslist-clone"
+              target="_blank"
+              ><i class="material-icons">code</i></a
+            >
           </li>
         </ul>
       </div>
